--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 <!--        <module>yudao-module-mall</module>-->
         <!-- 示例项目 -->
         <module>yudao-example</module>
+        <module>yudao-module-insurance</module>
     </modules>
 
     <name>${project.artifactId}</name>
