--- a/yudao-module-insurance/yudao-module-insurance-biz/pom.xml
+++ b/yudao-module-insurance/yudao-module-insurance-biz/pom.xml
@@ -72,5 +72,11 @@
             <groupId>cn.iocoder.boot</groupId>
             <artifactId>yudao-spring-boot-starter-excel</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.iocoder.boot</groupId>
+            <artifactId>yudao-module-bpm-api</artifactId>
+            <version>1.7.2-snapshot</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
