--- a/yudao-module-insurance/yudao-module-insurance-biz/pom.xml
+++ b/yudao-module-insurance/yudao-module-insurance-biz/pom.xml
@@ -74,7 +74,7 @@
         </dependency>
         <dependency>
             <groupId>cn.iocoder.boot</groupId>
-            <artifactId>yudao-module-bpm-api</artifactId>
+            <artifactId>yudao-module-bpm-biz</artifactId>
             <version>1.7.2-snapshot</version>
             <scope>compile</scope>
         </dependency>
